# Nexus-Trading-Bot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  Start_NEXUS.bat  Stop_NEXUS.bat  diag.py  lev.py  pyproject.toml  requirements.txt  scratch_status.py  train_model.py
check/: check_history.py  open_trades.py
core/: config.py  indicators.py  state_manager.py  utils.py
data/: codebase_audit.md
docs/: NEXUS_Book_Manual.html  NEXUS_Book_Manual.md  NEXUS_Core_Manual.html  NEXUS_Core_Manual.md
engine/: mt5_interface.py  news_filter.py  trade_logger.py
src/: auto_retrain.py  backfill_logs.py  evolve.py  goldvx.py  report.py  train_vwap_model.py
strategies/: base.py  bb_breakout.py  liquidity_sweep.py  london_breakout.py  rsi_reversion.py  smc_choch.py  smc_fvg.py  smc_orderblock.py  vwap_reversion.py
