[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-trading-bot"
version = "1.0.0"
description = "A highly advanced AI Quantitative Trading Engine"
authors = [{name = "Ugochi56"}]
requires-python = ">=3.9"
dependencies = [
    "MetaTrader5>=5.0.45",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas_ta>=0.3.14",
    "scikit-learn>=1.2.2",
    "joblib>=1.3.1",
    "requests>=2.31.0",
    "pytz>=2023.3"
]
